pushing updates from mac book, finishing softmax

--- a/lab3_Gradient_Descent/Gradient_Descent.ipynb
+++ b/lab3_Gradient_Descent/Gradient_Descent.ipynb
@@ -9,19 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#create a linear score function\n",
+    "##### create a linear score function\n",
     "#use the log soft-max loss function\n",
     "#To optimize the parameters use vanilla gradient descent\n",
     "\n",
     "import numpy as np\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
     "#@wingate\n",
@@ -53,33 +52,63 @@
     "features = (features - np.mean(features, axis=0)) / np.std(features, axis=0)\n",
     "#---\n",
     "\n",
+    "labels = (labels.flatten())\n",
     "\n",
     "class GradientDescent:\n",
     "    \n",
     "    def __init__(self):\n",
     "       \n",
     "        \n",
-    "        self.delta = .00001\n",
+    "        self.delta = 0.000001\n",
     "        self.W = np.random.rand(10,10)\n",
+    "        #@wingate\n",
+    "        self.step_size = .1\n",
+    "        self.scores = np.zeros((10,1000))\n",
     "        \n",
-    "        \n",
-    "    def softmax(self,vec):\n",
-    "        return (np.exp(vec)/np.sum(np.exp(vec),axis=0))    \n",
-    "        \n",
-    "    #def printr(self):\n",
-    "        #print(\"features \")\n",
-    "        #print(self.features)\n",
-    "        \n",
-    "        print(\"weights\")\n",
-    "        print(self.W)\n",
-    "        \n",
-    "        \n",
+    "    #LOSS\n",
+    "    def softmax(self,output,answer):\n",
+    "        np.sum(oneHot * G.scores,axis = 1)\n",
+    "        return np.sum(np.exp(answer)/np.sum(np.exp(output),axis=0)) \n",
+    "        #return np.log((np.exp(answer)/np.sum(np.exp(output),axis=0)))  \n",
     "    \n",
+    "    def old_softmax(self,vec):\n",
+    "        return (np.exp(vec)/np.sum(np.exp(vec),axis=0))     \n",
+    "    \n",
+    "    def numerical_gradient(self, loss_function, W):\n",
+    "        pass\n",
     "        \n",
+    "    def partial_derrivitave(self,x):\n",
+    "        return (f(x+self.delta)-f(x))/self.delta\n",
+    "    \n",
+    "    \n",
     "G = GradientDescent()\n",
+    "NUM_EPOCHS = 100\n",
+    "oneHot = np.eye(10)[labels]\n",
+    "\n",
+    "#print(oneHot)\n",
+    "\n",
+    "#print(features[1])\n",
+    "#print(labels[1])\n",
+    "\n",
+    "#print(G.softmax(labels[1],features[1]))\n",
+    "#print()\n",
+    "#print(G.old_softmax(labels[1]))\n",
+    "#exit()\n",
     "\n",
     "\n",
-    "\n",
+    "for num in range(NUM_EPOCHS):\n",
+    "    G.scores = np.dot(features,G.W)\n",
+    "    \n",
+    "    \n",
+    "    correctScores = G.softmax(\n",
+    "    \n",
+    "    \n",
+    "    #exit()\n",
+    "    #print(G.softmax(G.scores,oneHot))\n",
+    "    #print(G.scores)\n",
+    "    #loss_function_value, grad = numerical_gradient(loss_function, W)\n",
+    "    #W = W - step_size * grad\n",
+    "    #pass\n",
     "\n"
    ]
   },
@@ -103,10 +132,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -118,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
